--- a/css/medium.css
+++ b/css/medium.css
@@ -130,4 +130,12 @@
     margin: 0;
     background: rgba(0, 0, 0, 0.4);
   }
+  .about__text-container {
+    padding: 2rem;
+    width: 100%;
+    height: 100%;
+  }
+  .about__photo {
+    display: none;
+  }
 }/*# sourceMappingURL=medium.css.map */
