--- a/scss/medium.scss
+++ b/scss/medium.scss
@@ -173,5 +173,16 @@
 
   }
 
+  .about {
+    &__text-container {
+      padding: 2rem;
+      width: 100%;
+      height: 100%;
+    }
+    &__photo {
+      display: none;
+    }
+  }
+
 
 }
