minor adjustments of about section

--- a/css/main.css
+++ b/css/main.css
@@ -380,17 +380,15 @@ a {
   padding-left: 3rem;
   padding-top: 3rem;
 }
-.about__top-text {
-  color: #e9c19c;
-  font-size: 2.8rem;
-}
-.about__middle-text {
+.about h2 {
+  font-family: "Caveat", cursive;
   font-weight: bold;
-  font-size: 3.8rem;
+  font-size: 6rem;
 }
 .about__description {
   display: flex;
   padding: 2rem;
+  padding-left: 4rem;
   width: 100%;
 }
 .about__text-container {
@@ -398,7 +396,7 @@ a {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  width: 55%;
+  width: 50%;
   height: 100%;
   padding-left: 2rem;
 }
@@ -409,6 +407,7 @@ a {
 }
 .about__read-more-btn {
   padding-top: 2rem;
+  margin-bottom: 1.5rem;
 }
 .about__read-more-btn .btn {
   padding: 1.5rem 3rem;
@@ -431,11 +430,13 @@ a {
   background-color: rgb(236, 237, 238);
 }
 .about__photo {
-  width: 45%;
+  display: flex;
+  flex-direction: row-reverse;
+  width: 50%;
   height: 100%;
 }
 .about__photo img {
-  width: 80%;
+  width: 88%;
   border-radius: 50%;
 }
 
