--- a/css/main.css
+++ b/css/main.css
@@ -440,6 +440,35 @@ a {
   border-radius: 50%;
 }
 
+.info {
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+  border: 0.5px solid white;
+  color: white;
+  background: rgba(0, 0, 0, 0.4);
+}
+.info__short {
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+.info__element {
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.info__icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+}
+.info__text {
+  text-align: center;
+}
+
 @media (min-width: 768px) {
   .nav-mobile {
     display: none;
@@ -589,6 +618,7 @@ a {
     margin-left: 2rem;
   }
   .slider {
+    width: 90%;
     border: none;
     background: none;
   }
@@ -602,6 +632,7 @@ a {
     right: 0;
   }
   .opinion {
+    width: 90%;
     margin-top: 2rem;
     border: none;
     background: none;
@@ -622,6 +653,9 @@ a {
     margin: 0;
     background: rgba(0, 0, 0, 0.4);
   }
+  .about {
+    width: 90%;
+  }
   .about__text-container {
     padding: 2rem;
     width: 100%;
@@ -629,6 +663,12 @@ a {
   }
   .about__photo {
     display: none;
+  }
+  .info {
+    width: 90%;
+  }
+  .info__short {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 @media (max-width: 550px) {
