--- a/scss/medium.scss
+++ b/scss/medium.scss
@@ -129,8 +129,10 @@
 
   // slider
   .slider {
+    width: 90%;
     border: none;
     background: none;
+
     &__slides {
       img {
         width: calc(100% / 2);
@@ -140,13 +142,14 @@
     i:first-child {
       left: 0;
     }
-  
+
     i:last-child {
       right: 0;
     }
   }
 
   .opinion {
+    width: 90%;
     margin-top: 2rem;
     border: none;
     background: none;
@@ -174,14 +177,28 @@
   }
 
   .about {
+    width: 90%;
+
     &__text-container {
       padding: 2rem;
       width: 100%;
       height: 100%;
     }
+
     &__photo {
       display: none;
     }
+  }
+
+
+  .info {
+    // width: 50%;
+    width: 90%;
+
+    &__short {
+      grid-template-columns: repeat(1, 1fr);
+    }
+
   }
 
 
