--- a/scss/main.scss
+++ b/scss/main.scss
@@ -415,8 +415,6 @@ a {
 
 }
 
-
-
 .about {
   margin-top: 10rem;
   margin-bottom: 10rem;
@@ -507,7 +505,6 @@ a {
   }
 }
 
-// SECTION 2 - short-info, info
 .info {
   margin-top: 10rem;
   margin-bottom: 10rem;
@@ -543,35 +540,50 @@ a {
   }
 }
 
-// // SECTION 3 - member-info-section
-// .members {
-//   margin-top: 80px;
-//   margin-bottom: 80px;
-//   border: 1px solid white;
-//   background: rgba(0, 0, 0, 0.25);
-//   display: flex;
-//   justify-content: center;
-//   flex-wrap: wrap;
+.members {
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+  border: 1px solid white;
+  background: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 
-//   &__heading {
-//     width: 100%;
-//   }
+  &__heading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    padding-top: 3rem;
+    font-family: "Caveat", cursive;
+    font-weight: bold;
+    font-size: 6rem;
+    color: $white;
+  }
 
-//   &__member {
-//     margin: 50px;
-//     width: 40%;
-//     border: 1px solid white;
+  &__member {
+    margin: 2rem;
+    margin-bottom: 5rem;
+    width: 100%;
+    width: 46%;
+    border: 1px solid $border-color;
+    border-radius: 2rem;
 
-//     p {
-//       color: white;
-//     }
+    p {
+      color: white;
+      padding: 2rem;
+    }
 
-//     img {
-//       width: 100%;
-//       height: 80%;
-//     }
-//   }
-// }
+    img {
+      border-bottom: 1px solid $border-color;
+      width: 100%;
+      height: 80%;
+      border-radius: 2rem;
+    }
+  }
+}
 
 // .fa-leaf {
 //   color: rgb(28, 238, 28);
