--- a/css/main.css
+++ b/css/main.css
@@ -510,6 +510,122 @@ a {
   border-radius: 2rem;
 }
 
+.fa-leaf {
+  color: rgb(28, 238, 28);
+}
+
+.fa-pepper-hot {
+  color: rgb(230, 36, 36);
+}
+
+.fa-fish {
+  color: rgb(83, 124, 245);
+}
+
+.menu {
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+  border: 1px solid white;
+  background: rgba(0, 0, 0, 0.4);
+}
+.menu__heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  font-family: "Caveat", cursive;
+  font-size: 6rem;
+  color: rgb(236, 237, 238);
+}
+.menu__list {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 4rem 2rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #bfa182;
+  border-radius: 5rem;
+}
+.menu__list a {
+  font-size: 4rem;
+  font-weight: bold;
+  font-family: "Caveat", cursive;
+  color: rgb(236, 237, 238);
+  transition: color 300ms;
+  cursor: pointer;
+}
+.menu__list a:hover {
+  color: #f1bd52;
+}
+.menu .pizza {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.menu .pizza__list {
+  margin: 2rem;
+  border-bottom: 1px solid #bfa182;
+  border-radius: 2rem;
+  height: 10%;
+  padding: 1%;
+  display: flex;
+  justify-content: space-between;
+}
+.menu .pizza__list:last-child {
+  margin-bottom: 5rem;
+}
+.menu .pizza__name {
+  width: 50%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.menu .pizza__name p {
+  font-size: 25px;
+  font-weight: bold;
+  color: #ddd;
+}
+.menu .pizza__components p {
+  width: 100%;
+  padding-top: 10px;
+  font-size: 18px;
+  font-weight: normal;
+  color: #e9c19c;
+}
+.menu .pizza__prices {
+  width: 25%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.menu .pizza__prices p {
+  font-size: 20px;
+  color: #ddd;
+}
+.menu .pizza__btn {
+  padding: 1.5rem 3rem;
+  border: 1px solid black;
+  background-color: #724e2b;
+  height: 6rem;
+  color: rgb(236, 237, 238);
+  text-transform: uppercase;
+  font-weight: bold;
+  border-radius: 1rem;
+  transition: color 0.1s, background-color 0.1s;
+  cursor: pointer;
+  font-size: 1.4rem;
+}
+.menu .pizza__btn:hover {
+  color: #724e2b;
+  background-color: #ddd;
+}
+.menu .not-visible {
+  display: none;
+}
+
 @media (min-width: 768px) {
   .nav-mobile {
     display: none;
@@ -553,7 +669,6 @@ a {
     transition: color 0.1s;
   }
   .nav-desktop__item:hover {
-    color: #ffcc80;
     color: #f1bd52;
   }
   .opinion__client-rating {
