--- a/scss/main.scss
+++ b/scss/main.scss
@@ -200,11 +200,11 @@ a {
   }
 
   i:first-child {
-    left: -2.3rem;
+    left: 0;
   }
 
   i:last-child {
-    right: -2.3rem;
+    right: 0;
   }
 
   &__slides {
@@ -655,7 +655,7 @@ a {
     }
 
     &__name {
-      width: 50%;
+      width: 50rem;
       height: auto;
       display: flex;
       flex-direction: column;
@@ -663,8 +663,8 @@ a {
       align-items: flex-start;
 
       p {
-        font-size: 25px;
         font-weight: bold;
+        font-size: 25px;
         color: #ddd;
       }
     }
@@ -680,20 +680,21 @@ a {
     }
 
     &__prices {
-      width: 25%;
       height: auto;
       display: flex;
-      justify-content: space-between;
+
+      // justify-content: space-between;
       align-items: center;
 
       p {
-        font-size: 20px;
+        padding: 1rem;
+        font-size: 2rem;
         color: #ddd;
       }
     }
 
     &__btn {
-      padding: 1.5rem 3rem;
+      padding: 0.5rem 1rem;
       border: 1px solid black;
       background-color: $brown;
       height: 6rem;
@@ -705,160 +706,96 @@ a {
       cursor: pointer;
       font-size: 1.4rem;
     }
+
     &__btn:hover {
       color: #724e2b;
       background-color: #ddd;
     }
   }
 
-
-
-
   // .sauce {}
 
   // .promotion {}
 
   // .drinks {}
-  
+
   .not-visible {
     display: none;
   }
 }
 
+.contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+  background: rgba(0, 0, 0, 0.4);
+  border: 1px solid $white;
 
+  &__heading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: $white;
+    font-family: "Caveat", cursive;
+    font-size: 6rem;
+  }
 
+  &__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
 
+  &__map {
+    margin: 5rem;
+    width: 100%;
+    height: 80vh;
+  }
 
-// .header {
-//   position: sticky;
-// }
+  &__info {
+    margin-left: 0;
+    margin: 5rem;
+    width: 100%;
 
-// input:placeholder-shown {
-//   font-style: italic; // makes placeholder italics in input
-//   font-size: 16px;
-//   padding-left: 3%;
-// }
+    &-el {
+      margin: 5rem 0;
+      padding: 1.5rem 3rem;
+      width: 100%;
+      height: 10rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      border: 1px solid $border-color;
+      border-radius: 5rem;
+      font-size: 2rem;
+      p {
+        color: $white;
+      }
+    }
 
-// .row {
-//   width: 100%;
-//   display: flex;
-//   flex-direction: column;
-//   align-items: flex-start;
+    &-social {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
+      a {
+        font-size: 5rem;
+        color: $white;
+        transition: color 0.1s;
+      }
+      a:hover{
+        color: $creamy;
+      }
+    }
+  }
+}
 
-//   label {
-//     font-size: 12px;
-//     font-weight: bold;
-//   }
-
-//   input,
-//   select {
-//     width: 95%;
-//     height: 45px;
-//     display: flex;
-//     flex-wrap: wrap;
-//   }
-// }
-
-// textarea {
-//   width: 100%;
-//   height: 90%;
-//   resize: none;
-// }
-
-// // section 1 -> contact.sesion
-// .contact-section {
-//   margin-top: 3%;
-//   color: #ddd;
-//   font-size: 22px;
-
-//   .contact-header {
-//     display: flex;
-//     flex-direction: column;
-//     width: 100%;
-//     height: 15vh;
-
-//     p {
-//       display: flex;
-//       justify-content: center;
-//       align-items: center;
-//     }
-
-//     .p1 {
-//       font-style: italic;
-//       color: #e9c19c;
-//       font-size: 28px;
-//     }
-
-//     .p2 {
-//       font-weight: bolder;
-//       font-size: 38px;
-//       color: rgb(224, 224, 224);
-//     }
-
-//     .p3 {
-//       padding-top: 1.5%;
-//       font-size: 15px;
-//     }
-//   }
-
-//   .contact-container {
-//     background: rgba(0, 0, 0, 0.25);
-//     width: 100%;
-//     height: 775px;
-//     display: flex;
-//     justify-content: space-around;
-//     align-items: center;
-//     border: 1px solid #ddd;
-
-//     .map-container {
-//       width: 50%;
-//       height: 80%;
-//       border: 1px solid #ddd;
-//     }
-
-//     .contact-info {
-//       display: flex;
-//       flex-direction: column;
-//       padding: 2%;
-//       width: 40%;
-//       height: 80%;
-
-//       // border: 1px solid royalblue;
-//       div {
-//         width: 100%;
-//         height: 25%;
-//         margin: 3%;
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: center;
-//         align-items: center;
-//         border: 1px solid white;
-//         border-radius: 35%;
-//       }
-
-//       .contact-social {
-//         display: flex;
-//         flex-direction: row;
-//         text-decoration: none;
-
-//         .fa-brands {
-//           font-size: 60px;
-//           color: #ddd;
-//           transition: color 300ms, font-size 300ms;
-//         }
-
-//         .fa-brands:hover {
-//           color: #e9ab4e;
-//           font-size: 90px;
-//         }
-
-//         a {
-//           padding: 2%;
-//         }
-//       }
-//     }
-//   }
-// }
 
 // // section 2 -> contact-form-section
 // .contact-form-section {
