--- a/css/main.css
+++ b/css/main.css
@@ -284,8 +284,7 @@ a {
   font-size: 4rem;
   color: white;
 }
-
-.form {
+.opinion .form {
   min-width: 35rem;
   display: flex;
   flex-direction: column;
@@ -298,45 +297,45 @@ a {
   border: 1px solid #bfa182;
   border-radius: 2.5rem;
 }
-.form .fa-star {
+.opinion .form .fa-star {
   cursor: pointer;
 }
-.form .highlight {
+.opinion .form .highlight {
   color: #facd19;
 }
-.form__input-container {
+.opinion .form__input-container {
   display: flex;
   flex-direction: column;
   margin: 10px;
   padding: 10px;
   width: 100%;
 }
-.form__input-container input,
-.form__input-container textarea {
+.opinion .form__input-container input,
+.opinion .form__input-container textarea {
   width: 100%;
   height: 5rem;
   padding: 1rem;
   font-size: 2rem;
   border-radius: 1.5rem;
 }
-.form__input-container label {
+.opinion .form__input-container label {
   font-size: 2.3rem;
   margin-bottom: 1rem;
   font-style: italic;
 }
-.form__stars {
+.opinion .form__stars {
   display: flex;
   justify-content: center;
   align-items: flex-start;
 }
-.form__stars i {
+.opinion .form__stars i {
   font-size: 3rem;
 }
-.form__opinion textarea {
+.opinion .form__opinion textarea {
   height: 16rem;
   resize: none;
 }
-.form__btn {
+.opinion .form__btn {
   position: relative;
   width: 18rem;
   height: 6rem;
@@ -355,7 +354,7 @@ a {
   transition: color 0.3s, background-color 0.3s;
   cursor: pointer;
 }
-.form__btn:hover {
+.opinion .form__btn:hover {
   color: #724e2b;
   background-color: #ddd;
 }
@@ -626,6 +625,8 @@ a {
 }
 
 .contact {
+  margin-top: 10rem;
+  margin-bottom: 10rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -689,6 +690,177 @@ a {
 }
 .contact__info-social a:hover {
   color: #ffcc80;
+}
+
+.form {
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgb(236, 237, 238);
+}
+.form__container {
+  max-width: 70rem;
+  padding: 2em;
+  border: 1px solid rgb(236, 237, 238);
+  background: rgba(0, 0, 0, 0.4);
+}
+.form__heading {
+  font-size: 2.4rem;
+}
+.form__text {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  font-size: 1.7rem;
+}
+.form__inputs-textarea-container {
+  width: 100%;
+  display: flex;
+  padding-bottom: 2rem;
+}
+.form__inputs {
+  padding: 1rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.form__textarea {
+  padding: 1rem;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.form__attachment {
+  width: 100%;
+  height: 100%;
+  margin: 5% 0;
+}
+.form__attachment p {
+  padding-bottom: 1rem;
+  font-size: 1.8rem;
+}
+.form__attachment div {
+  font-weight: normal;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 230px;
+  height: 50px;
+  border: 1px solid #ddd;
+  border-radius: 2rem;
+  color: #f1bd52;
+  transition: background 0.1s, color 0.1s;
+  cursor: pointer;
+}
+.form__attachment div p {
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+}
+.form__attachment div input {
+  display: none;
+}
+.form__attachment div:hover {
+  background: rgba(0, 0, 0, 0.4);
+}
+.form__contact {
+  width: 100%;
+  height: auto;
+  padding-top: 4%;
+}
+.form__contact .p-above {
+  font-size: 20px;
+  padding-bottom: 10px;
+}
+.form__contact .p-below {
+  padding-top: 10px;
+  font-size: 14px;
+  color: rgb(245, 119, 119);
+}
+.form__contact-checkbox div {
+  display: flex;
+}
+.form__contact-checkbox div label {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.form__contact-checkbox div label input {
+  width: 20px;
+  height: 20px;
+  margin: 5px;
+  display: flex;
+  cursor: pointer;
+}
+.form__btn {
+  padding-top: 20px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+.form__btn .form-btn {
+  width: 350px;
+  height: 45px;
+  cursor: pointer;
+}
+.form__last-text {
+  display: flex;
+  margin-top: 35px;
+}
+.form__last-text div {
+  padding-right: 20px;
+}
+.form__last-text div i {
+  font-size: 30px;
+  color: white;
+}
+
+input:-moz-placeholder-shown {
+  font-style: italic;
+  font-size: 1.6rem;
+  padding-left: 1rem;
+}
+
+input:-ms-input-placeholder {
+  font-style: italic;
+  font-size: 1.6rem;
+  padding-left: 1rem;
+}
+
+input:placeholder-shown {
+  font-style: italic;
+  font-size: 1.6rem;
+  padding-left: 1rem;
+}
+
+.row {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.row label {
+  font-size: 12px;
+  min-width: 30rem;
+  width: 100%;
+  font-weight: bold;
+}
+.row input,
+.row select {
+  width: 100%;
+  min-width: 30rem;
+  height: 45px;
+}
+
+textarea {
+  resize: none;
 }
 
 @media (min-width: 768px) {
@@ -870,9 +1042,10 @@ a {
   .opinion__client-rating {
     background: rgba(0, 0, 0, 0.3);
   }
-  .form {
+  .opinion .form {
     margin: 0;
     background: rgba(0, 0, 0, 0.4);
+    margin: 0;
   }
   .about {
     width: 90%;
@@ -924,6 +1097,27 @@ a {
   .contact__info {
     margin: 0rem;
     width: 80%;
+  }
+  .form__container {
+    max-width: 39rem;
+  }
+  .form__inputs-textarea-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 2rem;
+  }
+  .form__inputs {
+    padding: 0rem;
+  }
+  .form__textarea {
+    padding: 0rem;
+  }
+  .form .row {
+    margin-bottom: 2.5rem;
+  }
+  .form .row label {
+    margin-bottom: 0.5rem;
   }
 }
 @media (max-width: 550px) {
