--- a/css/medium.css
+++ b/css/medium.css
@@ -128,9 +128,10 @@
   .opinion__client-rating {
     background: rgba(0, 0, 0, 0.3);
   }
-  .form {
+  .opinion .form {
     margin: 0;
     background: rgba(0, 0, 0, 0.4);
+    margin: 0;
   }
   .about {
     width: 90%;
@@ -182,5 +183,26 @@
   .contact__info {
     margin: 0rem;
     width: 80%;
+  }
+  .form__container {
+    max-width: 39rem;
+  }
+  .form__inputs-textarea-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 2rem;
+  }
+  .form__inputs {
+    padding: 0rem;
+  }
+  .form__textarea {
+    padding: 0rem;
+  }
+  .form .row {
+    margin-bottom: 2.5rem;
+  }
+  .form .row label {
+    margin-bottom: 0.5rem;
   }
 }/*# sourceMappingURL=medium.css.map */
