--- a/css/main.css
+++ b/css/main.css
@@ -707,7 +707,13 @@ a {
   background: rgba(0, 0, 0, 0.4);
 }
 .form__heading {
-  font-size: 2.4rem;
+  text-align: center;
+  font-family: "Caveat", cursive;
+  text-transform: lowercase;
+  font-size: 6rem;
+}
+.form__heading::first-letter {
+  text-transform: uppercase;
 }
 .form__text {
   padding-top: 3rem;
@@ -733,6 +739,9 @@ a {
   height: 100%;
   display: flex;
   flex-direction: column;
+}
+.form__textarea span {
+  color: #f1bd52;
 }
 .form__attachment {
   width: 100%;
@@ -805,10 +814,26 @@ a {
   display: flex;
   justify-content: flex-end;
 }
-.form__btn .form-btn {
-  width: 350px;
-  height: 45px;
+.form__btn-inside {
+  position: relative;
+  width: 32rem;
+  height: 4.4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  border: 1px solid black;
+  background-color: #724e2b;
+  color: rgb(236, 237, 238);
+  text-transform: uppercase;
+  font-weight: bold;
+  border-radius: 1rem;
+  transition: color 0.3s, background-color 0.3s;
   cursor: pointer;
+}
+.form__btn-inside:hover {
+  background-color: rgb(236, 237, 238);
+  color: #724e2b;
 }
 .form__last-text {
   display: flex;
@@ -846,21 +871,115 @@ input:placeholder-shown {
   flex-direction: column;
   align-items: flex-start;
 }
+.row span {
+  font-size: 1.5rem;
+  color: #f1bd52;
+}
 .row label {
-  font-size: 12px;
+  font-size: 1.2rem;
   min-width: 30rem;
   width: 100%;
   font-weight: bold;
 }
 .row input,
 .row select {
+  padding: 1rem;
   width: 100%;
   min-width: 30rem;
   height: 45px;
 }
 
 textarea {
+  padding: 1rem;
   resize: none;
+}
+
+.footer {
+  width: 100%;
+  height: 45rem;
+  background-color: #b89b7e;
+}
+.footer__main {
+  width: 100%;
+  height: 85%;
+  display: flex;
+  align-items: center;
+  color: rgb(45, 42, 37);
+  font-weight: bolder;
+}
+.footer__element {
+  display: flex;
+  padding: 0 1.4rem;
+  margin-bottom: 3.2rem;
+  font-size: 1.6rem;
+}
+.footer__logo {
+  font-size: 7rem;
+  font-family: "Caveat", cursive;
+  font-weight: normal;
+  color: rgb(241, 189, 82);
+}
+.footer__contact {
+  flex-direction: column;
+}
+.footer__contact p:nth-of-type(2) {
+  margin-bottom: 1rem;
+  margin-left: 0;
+}
+.footer__social {
+  flex-direction: column;
+}
+.footer__social a {
+  font-size: 5rem;
+  color: rgb(236, 237, 238);
+  transition: color 0.1s;
+}
+.footer__social a:hover {
+  color: #ffcc80;
+}
+.footer__social div a {
+  margin: 0.5rem;
+}
+.footer__payment {
+  flex-direction: column;
+}
+.footer__payment p {
+  margin-bottom: 2rem;
+}
+.footer__btn {
+  width: 100%;
+  height: 4.5rem;
+  padding: 2rem 4rem;
+  margin-left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.6rem;
+  border: 1px solid black;
+  background-color: #724e2b;
+  color: rgb(236, 237, 238);
+  text-transform: uppercase;
+  font-weight: bold;
+  border-radius: 1rem;
+  transition: color 0.3s, background-color 0.3s;
+  cursor: pointer;
+}
+.footer__btn:hover {
+  background-color: rgb(236, 237, 238);
+  color: #724e2b;
+}
+.footer__small {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  width: 100%;
+  height: 15%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.6rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  border-top: 1px solid rgb(236, 237, 238);
 }
 
 @media (min-width: 768px) {
@@ -1118,6 +1237,13 @@ textarea {
   }
   .form .row label {
     margin-bottom: 0.5rem;
+  }
+  .footer {
+    height: auto;
+  }
+  .footer__main {
+    align-items: flex-start;
+    flex-direction: column;
   }
 }
 @media (max-width: 550px) {
