--- a/css/medium.css
+++ b/css/medium.css
@@ -205,4 +205,11 @@
   .form .row label {
     margin-bottom: 0.5rem;
   }
+  .footer {
+    height: auto;
+  }
+  .footer__main {
+    align-items: flex-start;
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=medium.css.map */
