--- a/scss/main.scss
+++ b/scss/main.scss
@@ -819,7 +819,14 @@ a {
   }
 
   &__heading {
-    font-size: 2.4rem;
+    text-align: center;
+    font-family: "Caveat", cursive;
+    text-transform: lowercase;
+    font-size: 6rem;
+  }
+
+  &__heading::first-letter {
+    text-transform: uppercase
   }
 
   &__text {
@@ -849,6 +856,9 @@ a {
     height: 100%;
     display: flex;
     flex-direction: column;
+    span {
+      color: $special-cream;
+    }
   }
 
   &__attachment {
@@ -943,10 +953,28 @@ a {
     display: flex;
     justify-content: flex-end;
 
-    .form-btn {
-      width: 350px;
-      height: 45px;
+    
+
+    &-inside {
+      position: relative;
+      width: 32rem;
+      height: 4.4rem;;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.5rem;
+      border: 1px solid black;
+      background-color: $brown;
+      color: $white;
+      text-transform: uppercase;
+      font-weight: bold;
+      border-radius: 1rem;
+      transition: color 0.3s, background-color 0.3s;
       cursor: pointer;
+    }
+    &-inside:hover {
+      background-color: $white;
+      color: $brown;
     }
   }
 
@@ -977,8 +1005,13 @@ input:placeholder-shown {
   flex-direction: column;
   align-items: flex-start;
 
-  label {
-    font-size: 12px;
+  span {
+    font-size: 1.5rem;
+    color: $special-cream;
+  }
+
+  label {  
+    font-size: 1.2rem;
     min-width: 30rem;
     width: 100%;
     font-weight: bold;
@@ -986,6 +1019,7 @@ input:placeholder-shown {
 
   input,
   select {
+    padding: 1rem;
     width: 100%;
     min-width: 30rem;
     height: 45px;
@@ -993,35 +1027,112 @@ input:placeholder-shown {
 }
 
 textarea {
+  padding: 1rem;
   resize: none;
 }
 
-// .footer {
-//   position: static;
-//   bottom: 0;
-//   z-index: 100;
-//   width: 100%;
-//   background-color: #b89b7e;
-//   border: 1px solid white;
-//   // height: 100vh; na mobile odkomentować
+.footer {
+  width: 100%;
+  height: 45rem;
+  background-color: #b89b7e;
 
-//   &__item {
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-//     color: white;
-//     padding: 0.2em 1em;
-//     font-size: 1.8rem;
-//     font-weight: bold;
-//     text-transform: uppercase;
-//     text-decoration: none;
-//     color: #000;
-//   }
+  &__main {
+    width: 100%;
+    height: 85%;
+    display: flex;
+    align-items: center;
+    color: rgb(45, 42, 37);
+    font-weight: bolder;
+  }
 
-//   &__anchors {
-//     display: flex;
-//   }
-// }
+  &__element {
+    display: flex;
+    padding: 0 1.4rem;
+    margin-bottom: 3.2rem;
+    font-size: 1.6rem;
+  }
+
+  &__logo {
+    font-size: 7rem;
+    font-family: "Caveat", cursive;
+    font-weight: normal;
+    color: rgb(241, 189, 82);
+  }
+
+  &__contact {
+    flex-direction: column;
+    p:nth-of-type(2) {
+      margin-bottom: 1rem;
+      margin-left: 0;
+    }
+  }
+
+  &__social {
+    flex-direction: column;
+    a {
+      font-size: 5rem;
+      color: $white;
+      transition: color 0.1s;
+    }
+    a:hover {
+      color: $creamy;
+    }
+    div {
+      a {
+        margin: 0.5rem;
+      }
+    }
+  }
+
+  &__payment {
+    flex-direction: column;
+    p {
+      margin-bottom: 2rem;
+    }
+  }
+
+  &__btn {
+    width: 100%;
+    height: 4.5rem;
+    padding: 2rem 4rem;
+    margin-left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.6rem;
+    border: 1px solid black;
+    background-color: $brown;
+    color: $white;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: 1rem;
+    transition: color 0.3s, background-color 0.3s;
+    cursor: pointer;
+  }
+
+  
+  &__btn:hover {
+    background-color: $white;
+    color: $brown;
+  }
+
+
+
+  &__small {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    width: 100%;
+    height: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.6rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-top: 1px solid $white;
+  }
+
+}
 
 @import "./large.scss";
 @import "./medium.scss";
