--- a/css/small.css
+++ b/css/small.css
@@ -2,4 +2,18 @@
   .slider__slides img {
     width: 100%;
   }
+  .header__text-container {
+    min-width: 30rem;
+  }
+  .menu {
+    min-width: 100vw;
+  }
+  .menu__btn {
+    min-width: 17.7rem;
+    min-height: 5rem;
+    max-height: 5rem;
+    min-width: none;
+    min-height: none;
+    max-height: none;
+  }
 }/*# sourceMappingURL=small.css.map */
