--- a/scss/main.scss
+++ b/scss/main.scss
@@ -98,7 +98,7 @@ a {
   }
 
   &__text-container {
-    margin-left: 20rem;
+    margin-left: 12.5rem;
     margin-top: 14rem;
     display: flex;
     flex-direction: column;
@@ -635,7 +635,7 @@ a {
     }
   }
 
-  .pizza {
+  .element {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -664,7 +664,7 @@ a {
 
       p {
         font-weight: bold;
-        font-size: 25px;
+        font-size: 2.5rem;
         color: #ddd;
       }
     }
@@ -682,8 +682,6 @@ a {
     &__prices {
       height: auto;
       display: flex;
-
-      // justify-content: space-between;
       align-items: center;
 
       p {
@@ -694,17 +692,22 @@ a {
     }
 
     &__btn {
+      min-width: 17.7rem;
+      min-height: 5rem;
+      max-height: 5rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       padding: 0.5rem 1rem;
       border: 1px solid black;
       background-color: $brown;
-      height: 6rem;
       color: $white;
       text-transform: uppercase;
       font-weight: bold;
       border-radius: 1rem;
+      font-size: 1.4rem;
       transition: color 0.1s, background-color 0.1s;
       cursor: pointer;
-      font-size: 1.4rem;
     }
 
     &__btn:hover {
@@ -1034,6 +1037,7 @@ textarea {
 .footer {
   width: 100%;
   height: 45rem;
+  border: 1px solid $white;
   background-color: #b89b7e;
 
   &__main {
@@ -1133,6 +1137,10 @@ textarea {
   }
 
 }
+
+// @media (max-width: 1250px) {
+
+// }
 
 @import "./large.scss";
 @import "./medium.scss";
