--- a/scss/medium.scss
+++ b/scss/medium.scss
@@ -43,8 +43,6 @@
       transition: transform 0.3s;
     }
 
-
-
     .burger-icon {
       // display: none;
       font-size: 5rem;
@@ -98,8 +96,9 @@
     }
 
     &__text-container {
-      width: 38rem;
+      // width: 38rem;
       margin-left: 2rem;
+      margin-right: 2rem;
       border-radius: 1rem;
       background: rgba(0, 0, 0, 0.6);
       border: 0.4px solid white;
@@ -120,7 +119,11 @@
 
     &__link {
       margin: 2rem 0;
-      margin-left: 2rem;
+      margin-left: 1rem;
+      // margin-right: 5rem;
+    }
+    &__link:nth-child(2) {
+      margin-right: 5rem;
     }
   }
 
@@ -187,7 +190,6 @@
     }
   }
 
-
   .info {
     width: 90%;
 
@@ -213,7 +215,7 @@
       }
     }
 
-    .pizza {
+    .element {
       &__prices {
         display: none;
       }
